refactor: major reorganizing/prettifying of each factoring class and associated functionality